--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -2,13 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/movie_item_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/list_item_padding">
+    android:layout_height="wrap_content"
+    android:padding="@dimen/list_item_padding"
+    android:clickable="true">
 
     <ImageView
         android:id="@+id/poster_imageView"
         android:layout_width="@dimen/list_image_width"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/list_image_width"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@color/colorPrimary"
+        android:layout_marginRight="@dimen/list_item_padding"
+        android:layout_marginEnd="@dimen/list_item_padding"
         android:src="@drawable/ic_video_icon" />
 
     <TextView
@@ -18,6 +25,7 @@
         android:layout_toRightOf="@+id/poster_imageView"
         android:layout_toEndOf="@+id/poster_imageView"
         android:layout_alignParentTop="true"
+        android:textSize="20sp"
         android:text="GREATE MOVIE"/>
 
     <TextView
