--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/list_item_padding"
+    android:background="@drawable/list_item_background"
     android:clickable="true">
 
     <ImageView
@@ -13,7 +14,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="@color/colorPrimary"
+        android:background="@android:color/darker_gray"
         android:layout_marginRight="@dimen/list_item_padding"
         android:layout_marginEnd="@dimen/list_item_padding"
         android:src="@drawable/ic_video_icon" />
