--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -4,7 +4,7 @@
     android:id="@+id/movie_list_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.marcaoas.movielist.presentation.list.MovieListActivity">
+    tools:context="com.marcaoas.movielist.presentation.discover.MovieListActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/movies_recyclerView"
