--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="list_item_padding">8dp</dimen>
     <dimen name="list_image_width">100dp</dimen>
+    <dimen name="movie_title_padding">16dp</dimen>
+    <dimen name="movie_details_right_padding">8dp</dimen>
+    <dimen name="movie_details_left_padding">8dp</dimen>
 </resources>
