--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
     <dimen name="movie_title_padding">16dp</dimen>
     <dimen name="movie_details_right_padding">8dp</dimen>
     <dimen name="movie_details_left_padding">8dp</dimen>
+    <dimen name="movie_poster_margin">16dp</dimen>
+    <dimen name="movie_overview_text_size">16sp</dimen>
+    <dimen name="movie_backdrop_height">150dp</dimen>
 </resources>
