--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,66 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/movie_details_container"
-    android:background="@android:color/darker_gray">
+    android:fitsSystemWindows="true"
+    tools:context=".presentation.details.MovieDetailsActivity" >
 
-    <ImageView
-        android:id="@+id/backdrop_imageView"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/movie_backdrop_height"
-        android:scaleType="centerCrop"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true" />
-
-    <TextView
-        android:id="@+id/movie_title_textView"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/backdrop_imageView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="@color/colorAccent"
-        android:textColor="@android:color/white"
-        android:textSize="20sp"
-        android:paddingTop="@dimen/movie_title_padding"
-        android:paddingBottom="@dimen/movie_title_padding"
-        android:paddingLeft="@dimen/movie_details_left_padding"
-        android:paddingStart="@dimen/movie_details_left_padding"
-        android:paddingRight="@dimen/movie_details_right_padding"
-        android:paddingEnd="@dimen/movie_details_right_padding"
-        android:text="MOVIE NAME "/>
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
 
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleMarginStart="48dp" >
 
-    <ImageView
-        android:id="@+id/poster_imageView"
-        android:layout_width="@dimen/list_image_width"
-        android:layout_height="@dimen/list_image_width"
-        android:layout_below="@+id/movie_title_textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="@android:color/darker_gray"
-        android:layout_marginTop="@dimen/movie_poster_margin"
-        android:layout_marginBottom="@dimen/movie_poster_margin"
-        android:layout_marginLeft="@dimen/movie_details_left_padding"
-        android:layout_marginStart="@dimen/movie_details_left_padding"
-        android:layout_marginRight="@dimen/movie_poster_margin"
-        android:layout_marginEnd="@dimen/movie_poster_margin"
-        android:src="@drawable/ic_video_icon" />
+            <ImageView
+                android:id="@+id/backdrop_imageView"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/movie_backdrop_height"
+                app:layout_collapseMode="parallax"
+                android:fitsSystemWindows="true"
+                android:scaleType="fitXY" />
 
+            <ImageView
+                android:id="@+id/backdrop_shadow_imageView"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/movie_backdrop_height"
+                app:layout_collapseMode="parallax"
+                android:fitsSystemWindows="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/backdrop_shadow"/>
 
-    <TextView
-        android:id="@+id/movie_overview_textView"
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/movie_title_textView"
-        android:layout_toRightOf="@+id/poster_imageView"
-        android:layout_toEndOf="@+id/poster_imageView"
-        android:layout_marginTop="@dimen/movie_poster_margin"
-        android:layout_marginRight="@dimen/movie_details_right_padding"
-        android:layout_marginEnd="@dimen/movie_details_right_padding"
-        android:textSize="@dimen/movie_overview_text_size"
-        android:text="movie overview"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:clipToPadding="false" >
 
-</RelativeLayout>
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/movie_details_container"
+            tools:context="com.marcaoas.movielist.presentation.details.MovieDetailsActivity">
+
+            <ImageView
+                android:id="@+id/poster_imageView"
+                android:layout_width="@dimen/details_image_width"
+                android:layout_height="@dimen/details_image_height"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:background="@android:color/darker_gray"
+                android:layout_marginTop="@dimen/movie_poster_margin"
+                android:layout_marginBottom="@dimen/movie_poster_margin"
+                android:layout_marginLeft="@dimen/movie_details_left_padding"
+                android:layout_marginStart="@dimen/movie_details_left_padding"
+                android:layout_marginRight="@dimen/movie_poster_margin"
+                android:layout_marginEnd="@dimen/movie_poster_margin"
+                tools:src="@drawable/ic_video_icon" />
+
+
+            <TextView
+                android:id="@+id/movie_overview_textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/poster_imageView"
+                android:layout_toEndOf="@+id/poster_imageView"
+                android:layout_marginTop="@dimen/movie_poster_margin"
+                android:layout_marginRight="@dimen/movie_details_right_padding"
+                android:layout_marginEnd="@dimen/movie_details_right_padding"
+                android:textSize="@dimen/movie_overview_text_size"
+                tools:text="movie overview"/>
+
+        </RelativeLayout>
+    </android.support.v4.widget.NestedScrollView>
+</android.support.design.widget.CoordinatorLayout>
