--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/poster_imageView"
         android:layout_width="@dimen/list_image_width"
-        android:layout_height="@dimen/list_image_width"
+        android:layout_height="@dimen/list_image_height"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
