--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,10 +4,14 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="list_item_padding">8dp</dimen>
     <dimen name="list_image_width">100dp</dimen>
+    <dimen name="list_image_height">150dp</dimen>
+    <dimen name="details_image_width">150dp</dimen>
+    <dimen name="details_image_height">225dp</dimen>
     <dimen name="movie_title_padding">16dp</dimen>
     <dimen name="movie_details_right_padding">8dp</dimen>
     <dimen name="movie_details_left_padding">8dp</dimen>
     <dimen name="movie_poster_margin">16dp</dimen>
-    <dimen name="movie_overview_text_size">16sp</dimen>
-    <dimen name="movie_backdrop_height">150dp</dimen>
+    <dimen name="movie_overview_text_size">18sp</dimen>
+    <dimen name="movie_backdrop_height">220dp</dimen>
+
 </resources>
