--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,5 +13,12 @@
     <dimen name="movie_poster_margin">16dp</dimen>
     <dimen name="movie_overview_text_size">18sp</dimen>
     <dimen name="movie_backdrop_height">220dp</dimen>
+    <dimen name="default_spacing">16dp</dimen>
+    <dimen name="messages_view_right_padding">16dp</dimen>
+    <dimen name="messages_view_left_padding">16dp</dimen>
+    <dimen name="messages_view_bottom_padding">32dp</dimen>
+    <dimen name="messages_view_top_padding">32dp</dimen>
+    <dimen name="small_spacing">8dp</dimen>
+    <dimen name="large_spacing">32dp</dimen>
 
 </resources>
