--- a/app/src/main/res/layout/extra_messages_view.xml
+++ b/app/src/main/res/layout/extra_messages_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingTop="@dimen/messages_view_top_padding"
     android:paddingBottom="@dimen/messages_view_bottom_padding"
     android:paddingLeft="@dimen/messages_view_left_padding"
