--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="list_item_padding">8dp</dimen>
+    <dimen name="list_item_half_padding">4dp</dimen>
     <dimen name="list_image_width">100dp</dimen>
     <dimen name="list_image_height">150dp</dimen>
     <dimen name="details_image_width">150dp</dimen>
@@ -20,5 +21,9 @@
     <dimen name="messages_view_top_padding">32dp</dimen>
     <dimen name="small_spacing">8dp</dimen>
     <dimen name="large_spacing">32dp</dimen>
+    <dimen name="rating_star_size">80dp</dimen>
+    <dimen name="rating_star_padding">30dp</dimen>
+    <dimen name="navigation_bar_bottom">40dp</dimen>
+    <dimen name="movie_small_margin">4dp</dimen>
 
 </resources>
